responsive design testing

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
-            "file": "${workspaceRoot}/index.html"
+            "webRoot": "${workspaceFolder}",
+            "file": "${workspaceRoot}/index.html",
         }
     ]
 }
